# jigsaw

./: .env.example  .gitignore  .gitmodules  README.md  clean.sh  docker-compose.yaml  main.py  params.yaml  publish_kaggle.sh  push.sh  pyproject.toml  requirements.txt  sample.sh  schema.yaml  template.py
.github/workflow/: kaggle_submission_workflow.yml  workflow.yml
.github/workflows/: kaggle_dataset.yml  kaggle_submission_workflow.yml  kaggle_utility_run.yml
artifacts/data/validation/: status.json
config/: config.yaml  config1.yaml  config2.yaml
jigsaw/: __init__.py
jigsaw/components/: data_ingestion.py
jigsaw/config/: config.py
jigsaw/types/: __init__.py
jigsaw/utils/: common.py
notebooks/: data_transformation.ipynb  kernel-metadata.json  model_pusher.ipynb  submission_runtime_v01.ipynb
notebooks/installation/: install.py
research/: data_transformation.ipynb  data_validation.ipynb  simple_deberta_classifier.ipynb  training_engine.ipynb
schemas/: competition.yaml  syn.yaml
scripts/: init.sql  notebook.sh  publish_kaggle.sh
src/backend/: Dockerfile  handler.py  requirements.txt
src/jigsaw/: __init__.py
src/jigsaw/components/: __init__.py  data_ingestion.py  data_validation.py  inference.py  train.py
src/jigsaw/config/: __init__.py  config.py
src/jigsaw/constants/: __init__.py  data.py  prompt.py
working/: data_transformation.ipynb  jigsaw-agile-community-rules-subs-cache.pickle  kaggle_runtime.ipynb  simple_deberta_classifier.ipynb  submission_runtime_v01.ipynb  training.ipynb  training_engine.ipynb
working/installation/: jigsaw_installation.ipynb  kernel-metadata.json
(+45 files in other folders)
